Stop question numbers from overlapping questions
Most of the way towards fixing https://www.pivotaltracker.com/n/projects/997836/stories/106191644

On < desktop sized screens the question numbers in the supplier declaration
overlap the text of the questions.

This commit changes the question numbers so that:
- they are only outdented on the very largest screen size
- they are otherwise displayed inline with the question

This also adds question numbers to some of the example forms so that the pattern
can be tested more easily.

This showed up a problem when question numbers were wrapped in a validation
error, which is also addressed by this commit.

--- a/toolkit/scss/forms/_questions.scss
+++ b/toolkit/scss/forms/_questions.scss
@@ -35,8 +35,10 @@
 .question-number {
 
   @include bold-24;
-  display: block;
-  margin-bottom: -20px;
+  display: inline;
+  word-spacing: -0.1em;
+  margin-right: 0.2em;
+  float: left;
 
   &:after {
     content: ".";
@@ -44,13 +46,20 @@
 
   @include media(1080px) {
 
+    $left: -100px;
+
+    float: none;
     position: relative;
     height: 50px;
     display: block;
     margin: 20px 0 -50px 0;
-    left: -100px;
+    left: $left;
     width: 80px;
     text-align: right;
+
+    .validation-wrapper & {
+      left: $left - 20px;
+    }
 
     &:after {
       content: "";
